// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Basket component Renders a list of products with the title "Basket" and a checkout button 1`] = `
<figure
  className="Basket"
>
  <figcaption
    className="Basket-title"
  >
    Basket
  </figcaption>
  <ul
    className="Basket-list"
  >
    <li
      className="Basket-product"
    >
      Number One
    </li>
    <li
      className="Basket-product"
    >
      Number Two
    </li>
  </ul>
  <a
    href="/checkout"
    onClick={[Function]}
  >
    <button
      className="Basket-button"
    >
      Checkout
    </button>
  </a>
</figure>
`;

exports[`Basket component Renders a message if given no products 1`] = `
<figure
  className="Basket"
>
  <figcaption
    className="Basket-title"
  >
    Basket
  </figcaption>
  <ul
    className="Basket-list"
  />
  <p>
    Basket is empty
  </p>
  <a
    href="/checkout"
    onClick={[Function]}
  >
    <button
      className="Basket-button"
    >
      Checkout
    </button>
  </a>
</figure>
`;
